--- a/package.json
+++ b/package.json
@@ -13,6 +13,11 @@
     "autoprefixer": "^10.4.14",
     "postcss": "^8.4.26",
     "tailwindcss": "^3.3.3",
-    "vite": "^4.4.4"
+    "vite": "^4.4.6"
+  },
+  "dependencies": {
+    "body-parser": "^1.20.2",
+    "express": "^4.18.2",
+    "swup": "^3.1.1"
   }
 }
